@@ -148,6 +148,19 @@ level, digits, transf, targs, ...) {
             k.new <- nrow(newmods)                              #
             X.new <- cbind(newmods)                             #
          }                                                      #
+         if (!is.null(colnames(X.new)) && !is.null(colnames(x$X))) {
+            colnames.mod <- colnames(x$X)
+            if (x$int.incl)
+               colnames.mod <- colnames.mod[-1]
+            pos <- unlist(sapply(colnames(X.new), function(colname) grep(colname, colnames.mod, fixed=TRUE)))
+            if (anyDuplicated(pos))
+               stop("Multiple matches for the same variable name.")
+            if (length(pos) != ifelse(x$int.incl, x$p-1, x$p))
+               stop("Could not find a matching name for all variables in the model.")
+            colnames(X.new) <- colnames.mod[pos]
+            pos <- unlist(sapply(colnames.mod, function(colname) grep(colname, colnames(X.new), fixed=TRUE)))
+            X.new <- X.new[,pos,drop=FALSE]
+         }
       }                                                         #
 
       ### if the user has specified newmods and an intercept was included in the original model, add the intercept to X.new
